--- a/src/app/comment/comments-list/comments-list.component.html
+++ b/src/app/comment/comments-list/comments-list.component.html
@@ -1,3 +1,3 @@
-<app-comment-view *ngFor="let comment of comments" [comment]="comment" [userId]="userId" (getComments)="geComments($event)"></app-comment-view>
+<app-comment-view *ngFor="let comment of comments" [comment]="comment" [userId]="userId"></app-comment-view>
 
 <h3 *ngIf="!hasAnyComments">There are no comments. Be first!</h3>
