--- a/src/app/comment/delete-dialog-comment/delete-dialog-comment.component.html
+++ b/src/app/comment/delete-dialog-comment/delete-dialog-comment.component.html
@@ -1,7 +1,7 @@
 <div class="delete-dialog">
     <h1 mat-dialog-title>Are you sure to delete the comment?</h1>
     <div mat-dialog-actions>
-        <button mat-button (click)="deleteComment(data.commentId, data.postId)">Yes</button>
-        <button mat-button (click)="onNoClick()">No</button>
+        <button mat-raised-button [mat-dialog-close]="true">Yes</button>
+        <button mat-raised-button mat-dialog-close>No</button>
     </div>
 </div>
