Added component for recent posts, deleted lines with consol.elog, added '...' after post excerpt

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -32,8 +32,7 @@
                 </div>
                 <div id="appRecentPosts">
                     <h3 class="description-title">Recent Posts</h3>
-                    <ul class="recentPost">
-                    </ul>
+                    <app-recent-posts></app-recent-posts>
                 </div>
                 <div id="appTags">
                     <h3 class="description-title">Popular Tags</h3>
