--- a/src/app/post/list-preview/post-preview.component.html
+++ b/src/app/post/list-preview/post-preview.component.html
@@ -2,7 +2,7 @@
     <app-comments [comments]="post.comments"></app-comments>
     <app-edit-delete *ngIf="user && user.id === post.userId" [postId]="post.id"></app-edit-delete>
     <app-social></app-social>
-    <img class="img-responsive center-block" src="http://via.placeholder.com/850x450">
+    <img class="img-responsive center-block" src="http://via.placeholder.com/850x450" routerLink="/post/{{post.id}}">
 </div>
 
 <div class="description">
@@ -10,5 +10,5 @@
     <h2 class="description-post-title" routerLink="/post/{{post.id}}">{{ post.title }}</h2>
     <p class="description-post-date">{{ post.dateCreate | date: 'd' }}<span>th</span> {{ post.dateCreate | date: 'MMMM yyyy' }}</p>
     <h3 class="description-post-subtitle">{{ post.subtitle }}</h3>
-    <p class="description-post-text">{{ post.excerpt }}</p>
+    <p class="description-post-text">{{ post.excerpt }}...</p>
 </div>
