Changed title from Recent Posts tot Most Discussed Posts

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -31,7 +31,7 @@
                     <p>Ut eget metus nibh, nec scelerisque sem. Nulla dui purus, pellentesque sit amet rutrum vitae.</p>
                 </div>
                 <div id="appRecentPosts">
-                    <h3 class="description-title">Recent Posts</h3>
+                    <h3 class="description-title">Most Discussed Posts</h3>
                     <app-recent-posts></app-recent-posts>
                 </div>
                 <div id="appTags">
