Try to do 'replyTo'

--- a/src/app/comment/comment-create/comment-create.component.html
+++ b/src/app/comment/comment-create/comment-create.component.html
@@ -1,3 +1,4 @@
+<h5>Your are replying to {{toWhom}}</h5>
 <mat-form-field>
     <textarea matInput placeholder="Enter your comment" tabindex="1" [(ngModel)]="comment"></textarea>
 </mat-form-field>
