--- a/src/app/comment/comments-list/comments-list.component.html
+++ b/src/app/comment/comments-list/comments-list.component.html
@@ -1,3 +1,3 @@
-<app-comment-view *ngFor="let comment of comments" [comment]="comment" [userId]="userId"></app-comment-view>
-
+<app-comment-view *ngFor="let comment of comments" [comment]="comment" [userId]="userId" (reply)="reply($event)"></app-comment-view>
+<h5>gdtfb {{toWhom}}</h5>
 <h3 *ngIf="!hasAnyComments">There are no comments. Be first!</h3>
