Added ability ro reply to previous comment

--- a/src/app/comment/comment-create/comment-create.component.html
+++ b/src/app/comment/comment-create/comment-create.component.html
@@ -1,7 +1,6 @@
-<h5>Your are replying to {{toWhom}}</h5>
 <mat-form-field>
-    <textarea matInput placeholder="Enter your comment" tabindex="1" [(ngModel)]="comment"></textarea>
+    <textarea matInput placeholder="Enter your comment" tabindex="1" [value]="comment" [(ngModel)]="comment"></textarea>
 </mat-form-field>
 <div mat-dialog-actions>
-    <button mat-button type="submit" tabindex="2" (click)="comment.length !== 0 && createComment(comment, 0)" >Add comment</button>
+    <button mat-button type="submit" tabindex="2" (click)="comment.length !== 0 && createComment(comment)" >Add comment</button>
 </div>
