--- a/src/app/comment/comment-view/comment-view.component.html
+++ b/src/app/comment/comment-view/comment-view.component.html
@@ -1,6 +1,6 @@
 <ul class="comment">
     <li class="text-justify">
-        <a href="post/{{comment.postId}}#comment" class="comment-body" (click)="replyTo(comment.author)">
+        <a class="comment-body">
             <img src="http://via.placeholder.com/60x60" alt="user" class="img-responsive img-user">
             <a class="comment-remove" *ngIf="userId === comment.userId" (click)="openDialogDelete(comment.id, comment.postId)"><span class="glyphicon glyphicon-remove"></span></a>
             <div class="comment-info">
@@ -9,6 +9,8 @@
                 <span *ngIf="comment.previousId" class="comment-author">{{comment.prevAuthor}}</span>
                 <span class="comment-date">{{comment.dateUpdate | relativeDate}}</span>
                 <p>{{comment.text}}</p>
+                <p class="comment-reply" (click)="showFormComment()">Reply</p>
+                <app-comment-create *ngIf="isShown" [previousCommentId]="comment.id" [userId]="userId" [postId]="comment.postId"></app-comment-create>
             </div>
         </a>
         <ul *ngIf="comment.children">
