--- a/src/app/authorization/login/login.component.html
+++ b/src/app/authorization/login/login.component.html
@@ -12,6 +12,6 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button type="submit" tabindex="3" (click)="email.valid && password.valid && signIn(data)">Login</button>
-  <button mat-button (click)="onNoClickSignIn()" tabindex="-1">Cancel</button>
+  <button mat-raised-button type="submit" tabindex="3" (click)="email.valid && password.valid && signIn(data)">Login</button>
+  <button mat-raised-button (click)="onNoClickSignIn()" tabindex="-1">Cancel</button>
 </div>
