--- a/src/app/post/recent-posts/recent-posts.component.html
+++ b/src/app/post/recent-posts/recent-posts.component.html
@@ -1,6 +1,6 @@
 <ul class="recent-post">
     <li *ngFor="let post of posts" routerLink="/post/{{post.id}}">
-        <a class="post-text">{{ post.excerpt }}...</a>
+        <a class="post-text">{{ post.excerpt | shortenExcerpt }}...</a>
         <br>
         <small>{{ post.dateCreate | dateSuffix }}</small>
     </li>
