--- a/src/app/comment/comment-create/comment-create.component.html
+++ b/src/app/comment/comment-create/comment-create.component.html
@@ -2,5 +2,5 @@
     <textarea matInput placeholder="Enter your comment" tabindex="1" [value]="comment" [(ngModel)]="comment"></textarea>
 </mat-form-field>
 <div mat-dialog-actions>
-    <button mat-button type="submit" tabindex="2" (click)="comment.length !== 0 && createComment(comment)" >Add comment</button>
+    <button mat-raised-button type="submit" tabindex="2" (click)="comment.length !== 0 && createComment(comment)" >Add comment</button>
 </div>
