--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,13 @@
 
 <div class="header"></div>
 
+<ul class="left-social">
+    <li class="social-top"><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+    <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
+    <li class="social-bottom"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+</ul>
+
 <div class="content">
     <router-outlet></router-outlet>
 </div>
