Added multiline display of post text and comment text

--- a/src/app/comment/comment-view/comment-view.component.css
+++ b/src/app/comment/comment-view/comment-view.component.css
@@ -41,6 +41,10 @@
     margin-bottom: 0;
 }
 
+.comment-info .comment-info-text {
+    white-space: pre-wrap;
+}
+
 .comment-reply {
     color: #c2c2c2;
     text-decoration: underline;
