--- a/src/app/post/post-view/post-view.component.css
+++ b/src/app/post/post-view/post-view.component.css
@@ -63,6 +63,10 @@
     font-size: 14px;
 }
 
+.description .description-post-text {
+    white-space: pre-wrap;
+}
+
 .description p {
     color: #989898;
 }
