Started making pagination

--- a/src/app/layout/main-page/main-page.component.html
+++ b/src/app/layout/main-page/main-page.component.html
@@ -1,1 +1,6 @@
+<mat-paginator  [length]="length"
+                [pageSize]="pageSize"
+                [pageSizeOptions]="pageSizeOptions"
+                (page)="pageEvent = getServerData($event)">
+</mat-paginator>
 <app-posts-list [posts]="posts"></app-posts-list>
