Unsubscribed from all the subscriptions, moved some variables for pagination to the postService

--- a/src/app/comment/comment-view/comment-view.component.html
+++ b/src/app/comment/comment-view/comment-view.component.html
@@ -8,7 +8,8 @@
                 <span *ngIf="comment.previousId">to </span>
                 <span *ngIf="comment.previousId" class="comment-author">{{comment.prevAuthor}}</span>
                 <span class="comment-date">{{comment.dateUpdate | relativeDate}}</span>
-                <p class="comment-info-text">{{comment.text}}</p>
+                <p class="comment-info-text" *ngIf="!comment.isDeleted">{{comment.text}}</p>
+                <p class="comment-info-text comment-deleted" *ngIf="comment.isDeleted">This comment has been removed by author.</p>
                 <p class="comment-reply" (click)="showFormComment()">Reply</p>
                 <app-comment-create *ngIf="isShown" [previousCommentId]="comment.id" [userId]="userId" [postId]="comment.postId"></app-comment-create>
             </div>
