Added go-to-top button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,3 +82,17 @@
         </div>
     </div>
 </footer>
+
+<go-top-button
+    [html]="'<i class=\'fa fa-arrow-up\'></i>'"
+    [animate]="true"
+    [speed]="50"
+    [acceleration]="2"
+    [scrollDistance]="300"
+    [styles]="{
+        'right': '20px',
+        'border-radius': '3px',
+        'background': '#333',
+        'color': '#f26c4f'
+    }">
+</go-top-button>
