Fixed bug with redirect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,7 +83,7 @@
     </div>
 </footer>
 
-<!-- <go-top-button
+<go-top-button
     [html]="'<i class=\'fa fa-arrow-up\'></i>'"
     [animate]="true"
     [speed]="50"
@@ -95,4 +95,4 @@
         'background': '#333',
         'color': '#f26c4f'
     }">
-</go-top-button> -->
+</go-top-button>
