Connected frontend to new backend

--- a/src/app/modules/comment/comments-list/comments-list.component.html
+++ b/src/app/modules/comment/comments-list/comments-list.component.html
@@ -1,2 +1,4 @@
-<app-comment-view *ngFor="let comment of comments" [comment]="comment" [userId]="userId" (reply)="reply($event)"></app-comment-view>
 <h3 *ngIf="!hasAnyComments">There are no comments. Be first!</h3>
+<div *ngIf="hasAnyComments">
+    <app-comment-view *ngFor="let comment of comments" [comment]="comment" [userId]="userId" (reply)="reply($event)"></app-comment-view>
+</div>
