--- a/src/app/modules/post/post-view/post-view.component.html
+++ b/src/app/modules/post/post-view/post-view.component.html
@@ -12,7 +12,7 @@
                 </div>
 
                 <div class="description">
-                    <p class="description-post-info">{{ post.dateCreate | dateSuffix }} by {{post.authorName}} {{post.authorSurname}}</p>
+                    <p class="description-post-info">{{ post.dateCreate | dateSuffix }} by {{post.author}}</p>
                     <h3 class="description-post-subtitle">{{ post.subtitle }}</h3>
                     <p class="description-post-text">{{ post.text }}</p>
                 </div>
