Added dynamic component for showing ad banners

--- a/src/app/pages/index/sidebar/sidebar.component.html
+++ b/src/app/pages/index/sidebar/sidebar.component.html
@@ -33,4 +33,5 @@
         </div>
     </div>
 
-    <img src="http://www.mastera174.ru/images/side-banner.jpg" class="img-responsive center-block">
+    <!-- <img src="http://www.mastera174.ru/images/side-banner.jpg" class="img-responsive center-block"> -->
+    <app-ad-block></app-ad-block>
